// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileInput renders a disabled input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hRVLan"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 eKUXDU"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 kEzHLx FormField__FormFieldBox-sc-m9hood-0 iLyaEy"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 fWxvAi FormField__FormFieldContentBox-sc-m9hood-1 iGlnDK"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 sGmPi"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 haBftr"
            disabled=""
            type="file"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput renders a simple input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hRVLan"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 eKUXDU"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 kEzHLx FormField__FormFieldBox-sc-m9hood-0 iLyaEy"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eUUQwi FormField__FormFieldContentBox-sc-m9hood-1 iGlnDK"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 sGmPi"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 fCTTu"
            type="file"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput renders an input with a help message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hRVLan"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 eKUXDU"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 kEzHLx FormField__FormFieldBox-sc-m9hood-0 iLyaEy"
    >
      <span
        class="StyledText-sc-1sadyjn-0 dkbpSN"
      >
        This is a very cool input
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 eUUQwi FormField__FormFieldContentBox-sc-m9hood-1 iGlnDK"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 sGmPi"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 fCTTu"
            type="file"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput renders an input with a label 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hRVLan"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 eKUXDU"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 kEzHLx FormField__FormFieldBox-sc-m9hood-0 iLyaEy"
    >
      <label
        class="StyledText-sc-1sadyjn-0 julVzF"
        for="input"
        id="grommet-input__label"
      >
        Some input
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 eUUQwi FormField__FormFieldContentBox-sc-m9hood-1 iGlnDK"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 sGmPi"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 fCTTu"
            id="input"
            type="file"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput renders an input with a validation error 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hRVLan"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 eKUXDU"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 kEzHLx FormField__FormFieldBox-sc-m9hood-0 iLyaEy"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 vPsBe FormField__FormFieldContentBox-sc-m9hood-1 iGlnDK"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 sGmPi"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 fCTTu"
            type="file"
            value=""
          />
        </div>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 YswyP"
      >
        You failed at this
      </span>
    </div>
  </div>
</div>
`;

exports[`FileInput renders an input with an info message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hRVLan"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 eKUXDU"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 kEzHLx FormField__FormFieldBox-sc-m9hood-0 iLyaEy"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eUUQwi FormField__FormFieldContentBox-sc-m9hood-1 iGlnDK"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 sGmPi"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 fCTTu"
            type="file"
            value=""
          />
        </div>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 hleChS"
      >
        You can set a cool value
      </span>
    </div>
  </div>
</div>
`;
